--- a/src/View/Funcionario_View.form
+++ b/src/View/Funcionario_View.form
@@ -19,6 +19,7 @@
     </Container>
   </NonVisualComponents>
   <Properties>
+    <Property name="closable" type="boolean" value="true"/>
     <Property name="title" type="java.lang.String" value="Cadastro de Funcion&#xe1;rio"/>
   </Properties>
   <SyntheticProperties>
@@ -585,7 +586,7 @@
             <Component class="javax.swing.JTextField" name="TxtRG">
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="300" y="20" width="130" height="-1"/>
+                  <AbsoluteConstraints x="300" y="20" width="140" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -747,7 +748,7 @@
               </AuxValues>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="300" y="80" width="130" height="-1"/>
+                  <AbsoluteConstraints x="300" y="80" width="140" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
