--- a/src/View/Funcionario_View.form
+++ b/src/View/Funcionario_View.form
@@ -734,13 +734,7 @@
                   <Font name="Sitka Small" size="11" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="5">
-                    <StringItem index="0" value="Selecionar"/>
-                    <StringItem index="1" value="Gerente"/>
-                    <StringItem index="2" value="Administrador"/>
-                    <StringItem index="3" value="Operador"/>
-                    <StringItem index="4" value=" "/>
-                  </StringArray>
+                  <StringArray count="0"/>
                 </Property>
               </Properties>
               <AuxValues>
