Alteraçoes nas View

--- a/src/View/PessoaJuridica.form
+++ b/src/View/PessoaJuridica.form
@@ -6,6 +6,7 @@
       <Color blue="e7" green="cf" red="71" type="rgb"/>
     </Property>
     <Property name="closable" type="boolean" value="true"/>
+    <Property name="title" type="java.lang.String" value="Cadastro P. Juritica"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
